    symbol in the argument quote.
    For example: ${string::equal('False', string::contains(i, ')'))}.
  * Fixed issue at the 'string_last_index_of_any' function: first of symbols
    from 'any' list will not be compared with symbols from input string.
  * Allowed to build at Apple macOS environment.
  * Added 'platform::is-macos' function.
  * WIN32: fixed using at 'echo' task for scenario when output stream
    redirected to the file by capability of operation system -
    for example: 'ant4c.exe > 1.txt'.

 -- TheVice <TheVice>  DAY, DD MM YYYY HH:MM:SS +/-..

ant4c (2020.09)
  * Introduced support of modules.
  * Functions from the path unit allowed to operate with empty paths.
    Function 'combine' can be used for normalizing path.
  * Increased list of symbols to trim from string at 'string::trim'
    function.
  * Replaced script hash functions with hash length at the names with
    'blake2b', 'blake3', 'keccak' and 'sha3'.
  * Added support of 'blake3' and 'keccak' algorithms at the script
    function 'file::get-checksum'.
  * Added argument for configure algorithm - byte order, hash length,
    to the 'file::get-checksum' function.
  * Added possibility to use external events listener.
  * Added 'loadtasks' task.
  * For POSIX systems added searching of files with '.build' extension,
    if no file provided at command prompt.
  * Added 'path::glob' function.
  * Allowed to call executable from the directory that was set
    at the PATH environment variable.

 -- TheVice <TheVice>  Mon, 14 Sep 2020 17:11:16 +0300

ant4c (2020.05)

  * Attempt to set value for read only property will not fail
    evaluation of script.
  * Fixed enumeration of target dependencies if space or/and tabs
    was used between names.
  * Fixed enumeration of strings with non ASCII chars at 'for_each' task.
  * WIN32: fixed print of non ASCII chars at the terminal.

 -- TheVice <TheVice>  Sun, 24 May 2020 05:29:35 +0300

ant4c (2020.04)
