@@ -32,6 +32,7 @@ ant4c (YYYY.MM)
     from 'any' list will not be compared with symbols from input string.
   * Allowed to build at Apple macOS environment.
   * Added 'platform::is-macos' function.
+  * Fixed setting environment parameters in the 'exec' task.
   * WIN32: fixed using at 'echo' task for scenario when output stream
     redirected to the file by capability of operation system -
     for example: 'ant4c.exe > 1.txt'.
